# api-bancaria

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
src/controllers/: transaction.py
src/services/: transaction.py
tests/: conftest.py  test_account.py  test_auth.py  test_main.py  test_transaction.py
